--- a/src/client/sass/_var.scss
+++ b/src/client/sass/_var.scss
@@ -1,19 +1,6 @@
 // layout
-$columns: 12;
-$desktop-with: 1140px;
-$mobile-with: 748px;
-$navbar-height:50px;
-$grid-col-padding: 5px;
-$panel-padding:10px 15px; 
+$desktop-with: 1100px;
 //color
-$lighten-color:#B5B5B5;
-$panel-bg-color:#fff;
-$navbar-active-color:#1B9FFD;
-$border-color: #f1f1f1;
-$panel-header-color:#f9f9f9;
-$main-color: #333;
-$btn-border-color: #ECECEC;
-$btn-default-color:#f1f1f1;
-$btn-success-color:#27B587;
-$btn-warning-color:#F5922B;
-$btn-danger-color:#DE5656;
+$main-bg-color: #FDFDFD;
+$main-font-color: #333;
+$main-active-color: #2DB7F5;
