--- a/src/client/sass/app.scss
+++ b/src/client/sass/app.scss
@@ -2,27 +2,61 @@
 @import './var';
 @import './common';
 @import './login';
-.wrap{
-	width: 100%;
-	height: 100%;
+html,
+body {
+    font-size: 14px;
 }
-.navbar{
-    border-bottom: 1px solid #dedede;
-    .nav-left{
+
+.wrap {
+    width: 100%;
+    height: 100%;
+}
+
+.main-wrap {
+    max-width: $desktop-with;
+    margin: 0 auto;
+}
+
+.navbar-wrap {
+    background-color: #FDFDFD;
+    box-shadow: 0px -11px 1px 11px #9E9E9E;
+}
+
+// 导航栏
+.navbar {
+    .nav-left {
         display: inline-block;
         width: 80%;
         vertical-align: middle;
-        li{
+        li {
             display: inline-block;
-            a{
+            a {
                 padding: 12px 25px;
                 display: inline-block;
+                color: $main-font-color;
+                border-bottom:2px solid transparent;
+                transition: all .3s;
+                &.active{
+                    color: $main-active-color;
+                    border-bottom: 2px solid $main-active-color;
+                }
             }
         }
     }
-    .nav-right{
+    .nav-right {
         display: inline-block;
         width: 19%;
         vertical-align: middle;
+        
     }
+    .authed {
+        .ant-btn-group{
+            padding-right: 30px;
+        }
+    }
+}
+
+// 主体
+.content{
+    margin-top: 10px;
 }
