添加-创建项目功能

--- a/src/client/sass/_var.scss
+++ b/src/client/sass/_var.scss
@@ -2,5 +2,6 @@
 $desktop-with: 1100px;
 //color
 $main-bg-color: #FDFDFD;
+$main-border-color: #FBFBFB;
 $main-font-color: #333;
 $main-active-color: #2DB7F5;
