完善项目列表

--- a/src/client/sass/_var.scss
+++ b/src/client/sass/_var.scss
@@ -4,4 +4,4 @@ $desktop-with: 1100px;
 $main-bg-color: #FDFDFD;
 $main-border-color: #FBFBFB;
 $main-font-color: #333;
-$main-active-color: #2DB7F5;
+$main-active-color: #65b4fd;
