--- a/src/client/sass/app.scss
+++ b/src/client/sass/app.scss
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 @import './var';
+@import './grid';
 @import './common';
 @import './login';
-@import './add-project';
+@import './project-add';
+@import './project-list';
 html,
 body {
     font-size: 14px;
@@ -11,6 +13,9 @@ body {
 .wrap {
     width: 100%;
     height: 100%;
+}
+a{
+    color: #333;
 }
 
 .main-wrap {
@@ -46,7 +51,7 @@ body {
     }
     .nav-right {
         display: inline-block;
-        width: 40%;
+        width: 39%;
         vertical-align: middle;
     }
     .authed {
@@ -57,6 +62,3 @@ body {
 }
 
 // 主体
-.content {
-    padding-top: 10px;
-}
