添加项目详情

--- a/src/client/sass/app.scss
+++ b/src/client/sass/app.scss
@@ -5,6 +5,7 @@
 @import './login';
 @import './project-add';
 @import './project-list';
+@import './project-detail';
 html,
 body {
     font-size: 14px;
