--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -7,6 +7,7 @@
     }
     .detail-icon {
         display: inline-block;
+        margin-left: 20px;
         width: 100px;
         height: 100px;
     }
