--- a/src/client/sass/_project-list.scss
+++ b/src/client/sass/_project-list.scss
@@ -1,30 +1,32 @@
 @charset "UTF-8";
-.project-list{
+.project-list {
     margin-top: 10px!important;
     .item {}
     .detail {
         border: 1px solid $main-border-color;
+        border-radius: 3px;
         height: 150px;
         padding: 25px;
-        transition: border-color .3s;
+        transition: background-color .3s;
         &:hover {
-            border-color: $main-active-color;
+            background-color: #FBFBFB;
+            border-color: #F1F1F1;
         }
         .detail-icon {
             width: 100px;
             height: 100px;
             float: left;
         }
-        .detail-info{
-        	display: table-cell;
-        	padding-left: 10px;
-        	p{
-        		font-size: 12px;
-        		padding: 2px 0;
-        		&.name{
-        			font-size: 16px;
-        		}
-        	}
+        .detail-info {
+            display: table-cell;
+            padding-left: 10px;
+            p {
+                font-size: 12px;
+                padding: 2px 0;
+                &.name {
+                    font-size: 16px;
+                }
+            }
         }
     }
 }
