--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -39,19 +39,44 @@
         li {
             display: inline-block;
         }
-        a{
+        a {
             display: inline-block;
             padding: 10px 20px;
             cursor: pointer;
             border-bottom: 1px solid transparent;
             transition: all .3s;
-            &:hover{
+            &:hover {
                 color: $main-active-color;
             }
-            &.active{
+            &.active {
                 border-color: $main-active-color;
                 color: $main-active-color;
             }
         }
+    }
+    .ant-badge-count {
+        margin-left: 10px;
+        background-color: #00C4FF;
+        height: 18px;
+    }
+}
+
+.api-module {
+    .api-list-wrap {
+        position: fixed;
+        height: 100%;
+        width: 350px;
+        border-right: 1px solid $main-border-color;
+        .header {
+            height: 50px;
+            padding: 10px;
+            border-bottom: 1px solid $main-border-color;
+        }
+    }
+    .api-detail {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 350px;
     }
 }
