--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -69,8 +69,23 @@
         border-right: 1px solid $main-border-color;
         .header {
             height: 50px;
-            padding: 10px;
+            line-height: 50px;
             border-bottom: 1px solid $main-border-color;
+            .api-count{
+                display: inline-block;
+                width: 70%;
+                padding-left: 20px;
+            }
+            .api-add{
+                display: inline-block;
+                text-align: right;
+                padding-right: 30px;
+                width: 29%;
+                cursor: pointer;
+                &:hover{
+                    color: $main-active-color;
+                }
+            }
         }
     }
     .api-detail {
