--- a/src/client/sass/app.scss
+++ b/src/client/sass/app.scss
@@ -4,6 +4,7 @@
 @import './common';
 @import './login';
 @import './project-add';
+@import './api-add';
 @import './project-list';
 @import './project-detail';
 html,
