--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -87,6 +87,22 @@
                 }
             }
         }
+        .list{
+            li{
+                padding: 10px;
+                border-bottom: 1px solid $main-border-color;
+                transition: all .3s;
+                cursor: pointer;
+                &:hover{
+                    background-color: $main-border-color;
+                }
+            }
+            .name{
+                font-size: 16px;
+                padding-bottom: 10px;
+                color: #333;
+            }
+        }
     }
     .api-detail {
         position: fixed;
