--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -63,10 +63,10 @@
 
 .api-module {
     .api-list-wrap {
-        position: fixed;
+        float: left;
         height: 100%;
         width: 350px;
-        border-right: 1px solid $main-border-color;
+        border-right: 1px solid #FBFBFB;
         .header {
             height: 50px;
             line-height: 50px;
@@ -115,9 +115,39 @@
         }
     }
     .api-detail {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        left: 350px;
+        padding-left: 350px;
+        .header-wrap,{
+            background-color: #F1F1F1;
+            padding: 40px;
+        }
+        .header, .body-main {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+        .body-wrap{
+            padding: 10px 40px;
+            margin-bottom: 50px;
+            p{
+                padding: 10px 0;
+            }
+        }
+        .body-main {
+            .method, .url{
+                display: inline-block;
+                padding: 1px 5px;
+                border-radius: 3px;
+                background-color: #45C543;
+                color: #fff;
+                font-size: 12px;
+            }
+            .url{
+                background-color: #F79847;
+            }
+            .detail{
+                border-radius: 3px;
+                background-color: #FBFBFB;
+                padding: 20px;
+            }
+        }
     }
 }
