--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -96,7 +96,7 @@
         .list {
             .item {
                 position: relative;
-                padding: 10px;
+                padding: 10px 20px;
                 border-bottom: 1px solid $main-border-color;
                 transition: all .3s;
                 cursor: pointer;
@@ -110,12 +110,19 @@
                 top: 10px;
             }
             .name {
+                display: inline-block;
                 font-size: 16px;
                 padding-bottom: 10px;
                 color: #333;
+                width: 80%;
+            }
+            .time{
+                display: inline-block;
+                width: 19%;
+                text-align: right;
+                color: #A2A1A1;
             }
             .owner {
-                width: 75%;
                 display: inline-block;
             }
         }
