--- a/src/client/sass/_project-add.scss
+++ b/src/client/sass/_project-add.scss
@@ -13,4 +13,11 @@
     .ant-alert-with-description {
         margin-bottom: 0px!important;
     }
+    .methods {
+        background: rgba(249, 249, 249, 0.48);
+        border: 1px solid #F7F7F7;
+        padding: 20px 20px 5px;
+        border-radius: 2px;
+        margin-bottom: 30px;
+    }
 }
