重新调整要实现的功能

--- a/src/client/sass/_common.scss
+++ b/src/client/sass/_common.scss
@@ -1,3 +1,20 @@
+html,
+body {
+    font-size: 14px;
+}
+
+.wrap {
+    width: 100%;
+    height: 100%;
+}
+a{
+    color: #333;
+}
+
+.main-wrap {
+    max-width: $desktop-with;
+    margin: 0 auto;
+}
 .ttr{
 	text-align: right;
 }
