--- a/src/client/sass/_project-list.scss
+++ b/src/client/sass/_project-list.scss
@@ -1,30 +1,42 @@
 @charset "UTF-8";
-.project-list {
-    margin-top: 10px!important;
-    .item {}
-    .detail {
-        border: 1px solid $main-border-color;
-        border-radius: 3px;
-        height: 150px;
-        padding: 25px;
-        transition: background-color .3s;
-        &:hover {
-            background-color: #FBFBFB;
-            border-color: #F1F1F1;
-        }
-        .detail-icon {
-            width: 100px;
-            height: 100px;
-            float: left;
-        }
-        .detail-info {
-            display: table-cell;
-            padding-left: 10px;
-            p {
-                font-size: 12px;
-                padding: 2px 0;
-                &.name {
-                    font-size: 16px;
+.module {
+    background-color: #FDFDFD;
+    margin-top: 10px;
+    border: 1px solid #EAEAEA;
+    border-radius: 2px;
+    .module-header {
+        padding: 10px;
+        border-bottom: 1px solid #f5f5f5;
+    }
+    .project-list {
+        margin-top: 10px!important;
+        padding: 10px 20px 20px;
+        .item {}
+        .detail {
+            border: 1px solid $main-border-color;
+            background: #fff;
+            border-radius: 3px;
+            height: 150px;
+            padding: 25px;
+            transition: background-color .3s;
+            &:hover {
+                background-color: #FBFBFB;
+                border-color: #F1F1F1;
+            }
+            .detail-icon {
+                width: 100px;
+                height: 100px;
+                float: left;
+            }
+            .detail-info {
+                display: table-cell;
+                padding-left: 10px;
+                p {
+                    font-size: 12px;
+                    padding: 2px 0;
+                    &.name {
+                        font-size: 16px;
+                    }
                 }
             }
         }
