--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -142,6 +142,7 @@
         }
     }
     .api-detail {
+        overflow: hidden;
         .header {
             position: relative;
             background-color: #FBFBFB;
@@ -174,6 +175,40 @@
                 background-color: #FBFBFB;
                 padding: 20px;
             }
+        }
+        .comment {
+            margin-top: 80px;
+            ul{
+                border: 1px solid #f5f5f5;
+                border-bottom: 0;
+            }
+            li {
+                padding: 10px;
+                border-bottom: 1px solid #f5f5f5;
+                img {
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 15px;
+                    vertical-align: middle;
+                    margin-right: 15px;
+                }
+                .name{
+                    padding-right: 20px;
+                }
+                .time{
+                }
+                .content{
+                    padding: 5px;
+                    padding-left: 45px;
+                }
+            }
+        }
+        .add-comment {
+            border: 1px solid #EFEFEF;
+            overflow: hidden;
+            padding: 10px;
+            margin-top: 20px;
+            background-color: #f5f5f5;
         }
     }
 }
