--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -178,7 +178,7 @@
         }
         .comment {
             margin-top: 80px;
-            ul{
+            ul {
                 border: 1px solid #f5f5f5;
                 border-bottom: 0;
             }
@@ -192,12 +192,11 @@
                     vertical-align: middle;
                     margin-right: 15px;
                 }
-                .name{
+                .name {
                     padding-right: 20px;
                 }
-                .time{
-                }
-                .content{
+                .time {}
+                .content {
                     padding: 5px;
                     padding-left: 45px;
                 }
@@ -210,5 +209,8 @@
             margin-top: 20px;
             background-color: #f5f5f5;
         }
+    }
+    .CodeMirror {
+        height: auto;
     }
 }
