--- a/src/client/sass/app.scss
+++ b/src/client/sass/app.scss
@@ -2,6 +2,7 @@
 @import './var';
 @import './grid';
 @import './common';
+@import './codemirror';
 @import './navbar';
 @import './user';
 @import './login';
