--- a/src/client/sass/_project-add.scss
+++ b/src/client/sass/_project-add.scss
@@ -20,4 +20,8 @@
         border-radius: 2px;
         margin-bottom: 30px;
     }
+    .url-input {
+        font: 16px/1.7 DroidSansMono;
+        color: #00A1FF;
+    }
 }
