添加接口修改

--- a/src/client/sass/_var.scss
+++ b/src/client/sass/_var.scss
@@ -1,7 +1,7 @@
 // layout
 $desktop-with: 1100px;
 //color
-$main-bg-color: #FDFDFD;
-$main-border-color: #FBFBFB;
+$main-bg-color: #F2F2F2;
+$main-border-color: #F2F2F2;
 $main-font-color: #333;
 $main-active-color: #65b4fd;
