--- a/src/client/sass/_common.scss
+++ b/src/client/sass/_common.scss
@@ -7,7 +7,8 @@ body {
     width: 100%;
     height: 100%;
 }
-a{
+
+a {
     color: #333;
 }
 
@@ -15,12 +16,35 @@ a{
     max-width: $desktop-with;
     margin: 0 auto;
 }
-.ttr{
-	text-align: right;
+
+.ttr {
+    text-align: right;
 }
-.ttl{
-	text-align: left;
+
+.ttl {
+    text-align: left;
 }
-.ttc{
-	text-align: center;
+
+.ttc {
+    text-align: center;
+}
+
+.font-avart {
+    display: inline-block;
+    text-align: center;
+    background: #EFEFEF;
+}
+.font-avart-big {
+	width: 100px;
+    height: 100px;
+    font-size: 20px;
+    line-height: 100px;
+    border-radius: 50px;
+}
+.font-avart-small {
+	width: 40px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 40px;
+    border-radius: 20px;
 }
