--- a/src/client/sass/_project-detail.scss
+++ b/src/client/sass/_project-detail.scss
@@ -169,6 +169,7 @@
             }
             .url {
                 background-color: #F79847;
+                font-size: 16px;
             }
             .detail {
                 border-radius: 3px;
