--- a/src/client/sass/_navbar.scss
+++ b/src/client/sass/_navbar.scss
@@ -1,6 +1,6 @@
 // 导航栏
 .navbar-wrap {
-    background-color: #FDFDFD;
+    background-color: $main-bg-color;
     box-shadow: 0px -11px 1px 11px #9E9E9E;
 }
 .navbar {
